# flat_chart

./: Cargo.toml  LICENSE.txt  Makefile  README.md  mapping.toml
.github/workflows/: release.yml
.rpm/: flat_chart.spec
src/: check.rs  lib.rs  main.rs
tests/: mapping.toml  test_check.rs  test_lib.rs
