[package]
name = "flat_chart"
authors = [ "lei.zhao <oizhaolei@gmail.com>" ]
version = "0.1.1"
edition = "2021"
description = "flat xlsx data for business purpose"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.18.0"
chrono = "0.4.22"
clap = { version = "4.0.17", features = ["derive"] }
csv = "1.1.6"
itertools = "0.10.5"
regex = "1.6.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"
