[package]
name = "flat_chart"
authors = [ "lei.zhao <oizhaolei@gmail.com>" ]
version = "0.1.1"
edition = "2021"
description = "flat xlsx data for business purpose"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.18.0"
clap = { version = "4.0.17", features = ["derive"] }
csv = "1.1.6"
itertools = "0.10.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"

[package.metadata.rpm]
package = "flat_chart"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
flat_chart = { path = "/usr/bin/flat_chart" }
